@@ -1,3 +1,13 @@
+2009-07-17 11:59  cvs
+
+	* Makefile.PL: The makefile had an error. It was not properly
+	  stating requirements.
+
+2009-05-08 12:14  cvs
+
+	* lib/String/Similarity/Group.pm, lib/String/Similarity/Group.pod,
+	  t/00.t: fixed a bug in similarest(), improved test
+
 2009-05-07 14:33  cvs
 
 	* lib/String/Similarity/Group.pm, t/06_group_by_similarity_new.pl,
